--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <main class="links-container">
             <!-- Blocos de link tradicionais -->
-            <a href="https://wa.me/+5573999880314?text=Ol%C3%A1%20Luan,%20gostaria%20de%20fazer%20um%20cor%C3%A7amento">
+            <a href="https://wa.me/+5573999880314?text=Ol%C3%A1%20Luan,%20gostaria%20de%20fazer%20um%20cor%C3%A7amento" target="_blank">
             <div class="link-block" data-link="">
                 <div class="link-content">
                     <div class="link-icon">
@@ -45,7 +45,7 @@
             <div class="image-links-section">
                 <div class="image-links-grid">
                     <!-- Bloco de imagem 1 -->
-                    <a href="https://www.behance.net/luanribeirodsg">
+                    <a href="https://www.behance.net/luanribeirodsg" target="_blank">
                     <div class="image-link-block" data-link="">
                         <img src="https://lh3.googleusercontent.com/pw/AP1GczOzSflGA1sYqHDaa7jec8K7GVxPgYo6Xo4kZEWfQJeByix-r48bQKrbu9CTEz-OlwuNg023tIZv8fnpO13ha1K9_h-2JYscTU8nZ-bkRLjmAh4_pxGVSt_t1732ZnRbX4nxVA2KKtPET-tfB6WSumqLQg=w1140-h510-s-no-gm?authuser=0" alt="Link especial 1" class="image-link-img">
                         <div class="image-overlay">
