Update profile image and footer year

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
         <header class="header">
             <div class="profile-section">
                 <div class="profile-image">
-                    <img src="https://lh3.googleusercontent.com/pw/AP1GczNuO81ZJD8nTTCLkyMUuYZQlFLi9OKq1tc4E6zGaaZf47EmgxfmdItv8lBIpEMVX1UBPsBO9evJ-4Lnq7cfUdgFg-MFTaiGFVwShTWpC3lOgEcDWJxhpa8bAZt06KODU1P6cjLE2KQPjjzi3ZLYl710qA=w864-h939-s-no-gm?authuser=0" alt="Foto de perfil" id="profile-img">
+                    <img src="https://lh3.googleusercontent.com/pw/AP1GczOv5ooTQ2aS4K9UuuzHkSieBMbgzY0vbwYQK4gyx__l2d_xDIeQ1XSVtUFXLo-3AB10pTHvHJjwzMg0pzwXkMS4hpwvLl0QBKqLrXZUN4XO03dspOsQ936VDTgPlYSPstd-Amn9f7eTqrUA_lXgM7i2jQ=w944-h944-s-no-gm?authuser=0" alt="Foto de perfil" id="profile-img">
                 </div>
                 <h1 class="main-title" id="main-title">Luan Ribeiro</h1>
                 <p class="subtitle" id="subtitle">Design Social Media</p>
+                
             </div>
         </header>
 
         <main class="links-container">
             <!-- Blocos de link tradicionais -->
-            <a href="https://wa.me/+5573981978493?text=Ol%C3%A1%20Luan,%20gostaria%20de%20fazer%20um%20or%C3%A7amento" target="_blank">
+            <a href="https://wa.me/+5573999880314?text=Ol%C3%A1%20Luan,%20gostaria%20de%20fazer%20um%20cor%C3%A7amento" target="_blank">
             <div class="link-block" data-link="">
                 <div class="link-content">
                     <div class="link-icon">
@@ -47,7 +48,7 @@
                     <!-- Bloco de imagem 1 -->
                     <a href="https://www.behance.net/luanribeirodsg" target="_blank">
                     <div class="image-link-block" data-link="">
-                        <img src="https://lh3.googleusercontent.com/pw/AP1GczPiNTNPr3JoC6iHJMoeZy-r6leImhwWNolBGKV8nL0TY9davBZyN-507-gdhMSl9CHinbqB7eetxwgTGxHjBmGVyAhO3wNY98OqFmVHOOcJTuUfn2fJ6ocAj7S_LIfwQW0SSKnVBtdrXljyNDbN9WXRsA=w1140-h510-s-no-gm?authuser=0" alt="Link especial 1" class="image-link-img">
+                        <img src="https://lh3.googleusercontent.com/pw/AP1GczOFNvBuyiKf8pgr3XqHhgTxNE_bvSjNXm9h2xYD7btPLKNviuzphjb4aiOIT5kk5LKoeuildTk7ATRlAXT8eDrwQdUM1BV_Rc_1ymU5QuCKQOY_cqSN5jWhnfYCWqZu9yCOvJ7T0apvzAZwh0DFBd3wrQ=w1140-h510-s-no-gm?authuser=0" alt="Link especial 1" class="image-link-img">
                         <div class="image-overlay">
                             <div class="image-overlay-content">
                             </div>
@@ -87,7 +88,7 @@
         </main>
 
         <footer class="footer">
-            <p>&copy; LR STUDIO - 2025</p>
+            <p>&copy; LR STUDIO - 2026</p>
         </footer>
     </div>
 
