Update WhatsApp link text in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <main class="links-container">
             <!-- Blocos de link tradicionais -->
-            <a href="https://wa.me/+5573981978493?text=Ol%C3%A1%20Luan,%20gostaria%20de%20fazer%20um%20cor%C3%A7amento" target="_blank">
+            <a href="https://wa.me/+5573981978493?text=Ol%C3%A1%20Luan,%20gostaria%20de%20fazer%20um%20or%C3%A7amento" target="_blank">
             <div class="link-block" data-link="">
                 <div class="link-content">
                     <div class="link-icon">
