Update link from YouTube to Instagram

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                          </a>
                       <!-- Bloco de imagem 2 -->
-                         <a href="https://www.youtube.com/@luanribeirodsg" target="_blank">
+                         <a href="https://www.instagram.com/luanribeirodsg/" target="_blank">
                     <div class="image-link-block" data-link="">
                         <img src="https://lh3.googleusercontent.com/pw/AP1GczMPy_V5booLmVJ4LMsp1w5lt2VJyGPxFkxA9T5Uj0qt9AChqnLxBQzmNwEH4LKi-B2uFb1GD8cZxhzUjeQqgH8ljde8cqp_ICjEQmjEraiQkV7dN14IFjOkmu-Cmox38hcQBiD5tpXA3zELbAJhjk2GQg=w1140-h510-s-no-gm?authuser=0" alt="Link especial 1" class="image-link-img">
                         <div class="image-overlay">
